# capstone_rough

./: README.md
backend/: QuestionsByCategory.csv  create_db.py  crud.py  database.py  import_questions.py  main.py  models.py  pyproject.toml  routes.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Navbar.tsx  PrivateRoutes.tsx
frontend/src/components/profile/: ProfileInfoCard.tsx  ProfilePictureCard.tsx  ReportAnalytics.tsx
frontend/src/config/: axios.ts  firebase.ts  user-service.ts
frontend/src/context/: AuthContext.tsx  FileContext.tsx
frontend/src/pages/: FAQ.tsx  GettingStarted.tsx  Landing.tsx  Login.tsx  Profile.tsx  Session.tsx  SignUp.tsx
