[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["lamia-alam <lamia.alam@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.36"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = "^0.34.0"
psycopg2-binary = "^2.9.10"
fastapi-cors = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
